force-app/main/default/objects/KimbleOne__RevenueMilestone__c/KimbleOne__RevenueMilestone__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Revenue Milestone</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RevenueMilestone Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>