force-app/main/default/objects/KimbleOne__RevenueMilestone__c/fields/KimbleOne__MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneDate__c</fullName>
    <label>Milestone Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>