force-app/main/default/objects/KimbleOne__RevenueMilestone__c/fields/KimbleOne__MilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneValue__c</fullName>
    <label>Milestone Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>